# docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "2.0"
     },
-    "host": "192.168.1.6:8080",
+    "host": "192.168.1.4:8080",
     "paths": {
         "/administer/examine/getposts": {
             "get": {
@@ -1891,6 +1891,10 @@
                     "type": "string",
                     "example": "0"
                 },
+                "qualified": {
+                    "description": "是否加精",
+                    "type": "boolean"
+                },
                 "status": {
                     "description": "帖子状态，管理审核时使用，无需填入",
                     "type": "integer"
@@ -1984,11 +1988,15 @@
                     "description": "头像链接",
                     "type": "string"
                 },
+                "qualified": {
+                    "description": "是否加精",
+                    "type": "boolean"
+                },
                 "token": {
                     "description": "后端返回的用户 token",
                     "type": "string"
                 },
-                "userID": {
+                "user_id": {
                     "description": "用户id",
                     "type": "string"
                 },
